--- a/Fetch1/app/app.css
+++ b/Fetch1/app/app.css
@@ -29,7 +29,7 @@ nav{
 }
 .slide-animate{
 	height: 100%;
-	margin-top: 66px;		/* head height */
+	margin-top: 66px;			/* head height */
 	margin-bottom: 22px;		/* foot height */
 	padding: 0 44px 0 44px;
 }
@@ -64,6 +64,11 @@ h1{
 	height: 22px;
 }
 
+.space-small{
+	display: inline-block;
+	width: 5%;
+}
+
 .button-base{
 	width: 100%;
 	height: 44px;
@@ -75,7 +80,9 @@ h1{
 .button-half{
 	width: 43%;
 }
-
+.button-skinny{
+	width: 25%;
+}
 .dark{
 	background-color: #051B57;
 	color: #FFFFFF;
@@ -91,4 +98,23 @@ h1{
 	background-color: #51B009;
 	color: #FFFFFF;
 	border-color: limegreen;
+}
+
+.lighter{
+	background-color: #A7ADAD;
+	color: #000000;
+	border-color: silver;
+}
+
+.window {
+	background: #FFFFFF;
+	border: 1px solid gray;
+	border-radius: 4px;
+	margin: 0 -22px 0 -22px;
+}
+
+td{
+	font-size: 10px;
+	text-align: left;
+	min-width: 60px;
 }
