--- a/Fetch1/app/app.css
+++ b/Fetch1/app/app.css
@@ -49,6 +49,10 @@ button{
 	border-radius: 4px;
 }
 
+.selected{
+	border: 3px solid green !important;
+}
+
 .center-v-wrapper { display: table; width: 100%; height: 100%; }
 .center-v-cell { display: table-cell; vertical-align: middle; }
 .center-h { display: block; width: 100%; margin: auto; }
