--- a/Fetch1/app/app.css
+++ b/Fetch1/app/app.css
@@ -50,7 +50,9 @@ button{
 }
 
 .selected{
-	border: 3px solid green !important;
+	/*opacity: .5;*/
+	border-color: black!important;
+	color: black!important;
 }
 
 .center-v-wrapper { display: table; width: 100%; height: 100%; }
@@ -152,10 +154,18 @@ button{
 	background: #FFFFFF;
 	border: 1px solid gray;
 	border-radius: 4px;
+	overflow: auto;
 }
 
 td{
 	font-size: 10px;
 	text-align: left;
 	min-width: 60px;
+}
+
+.paymentPosition{
+
+	width: 120px;
+	float: right;
+
 }
