--- a/Fetch1/app/app.css
+++ b/Fetch1/app/app.css
@@ -51,8 +51,8 @@ button{
 
 .selected{
 	/*opacity: .5;*/
-	border-color: black!important;
-	color: black!important;
+	border-color: red!important;
+	color: red!important;
 }
 
 .center-v-wrapper { display: table; width: 100%; height: 100%; }
