--- a/Fetch1/app/app.css
+++ b/Fetch1/app/app.css
@@ -51,8 +51,8 @@ button{
 
 .selected{
 	/*opacity: .5;*/
-	border-color: red!important;
-	color: red!important;
+	border-color: lime!important;
+	color: lime!important;
 }
 
 .center-v-wrapper { display: table; width: 100%; height: 100%; }
@@ -155,6 +155,10 @@ button{
 	border: 1px solid gray;
 	border-radius: 4px;
 	overflow: auto;
+}
+
+.error{
+	background-color: pink;
 }
 
 td{
