--- a/Fetch1/app/app.css
+++ b/Fetch1/app/app.css
@@ -55,6 +55,12 @@ button{
 	color: lime!important;
 }
 
+button:disabled {
+	color: gray;
+	background-color: silver;
+	border: 1px solid gray;
+}
+
 .center-v-wrapper { display: table; width: 100%; height: 100%; }
 .center-v-cell { display: table-cell; vertical-align: middle; }
 .center-h { display: block; width: 100%; margin: auto; }
