--- a/Fetch1/app/app.css
+++ b/Fetch1/app/app.css
@@ -128,7 +128,11 @@ button:disabled {
 	border-color: black;
 }
 
-.darker > input {
+.darker input {
+    color: black;
+}
+
+.darker td {
     color: black;
 }
 
