--- a/Fetch1/app/app.css
+++ b/Fetch1/app/app.css
@@ -8,6 +8,17 @@ body {
 	text-align: center;
 	font-family: Helvetica, Arial, sans-serif;
 }
+
+#addsToggle {
+    background-color: orange;
+    color: black;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    font-weight: bold;
+    overflow: hidden;
+    cursor: pointer;
+}
+
 header{
 	position: fixed;
 	width: 100%;
@@ -30,7 +41,7 @@ nav{
 .slide-animate{
 	height: 100%;
 	margin-top: 66px;			/* head height */
-	margin-bottom: 0px;			/* foot height */
+	margin-bottom: 20px;			/* foot height */
 	padding: 0 44px 0 44px;
 	overflow: auto;
 }
@@ -38,7 +49,7 @@ footer{
 	position: fixed;
 	width: 100%;
 	bottom: 0;
-	height: 0px;                /* foot height */
+	height: 20px;                /* foot height */
 	overflow: auto;
 }
 
