--- a/Fetch1/app/app.css
+++ b/Fetch1/app/app.css
@@ -94,6 +94,10 @@ button:disabled {
 	min-height: 88px;
 }
 
+.tallish {
+	height: 40vh;
+}
+
 .medium{
 	min-height: 44px;
 }
@@ -171,13 +175,9 @@ button:disabled {
 }
 
 .city {
-	height: 100%;
 	background-image: url(../resources/screen/city.png);
-	background-size: auto 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	margin-top: 66px;
-	margin-bottom: 0;
+	background-size: contain;
+	background-repeat: repeat ;
 }
 
 .window {
@@ -209,7 +209,7 @@ td{
 
 #map-canvas { 
 	width  : 100%;
-    height : 300px;
+    height : 60vh;
 }
 
 .instruction {
